namespaces/live.cloud-platform.service.justice.gov.uk/laa-manage-a-providers-data-production/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-manage-a-providers-data-production"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-manage-a-providers-data"
    cloud-platform.justice.gov.uk/application: "Manage a Providers Data"
    cloud-platform.justice.gov.uk/owner: "Manage a Providers Data: civil.legal.advice@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-manage-a-providers-data"
    cloud-platform.justice.gov.uk/team-name: "laa-get-access"
    cloud-platform.justice.gov.uk/review-after: ""
